IT fix and overflow fix for navigation list in showcase.

--- a/packages/ketchup-showcase/public/showcase.css
+++ b/packages/ketchup-showcase/public/showcase.css
@@ -65,7 +65,8 @@ h3 {
   top: auto;
   width: 250px;
   max-height: 75vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .logo_header {
